@@ -3,8 +3,8 @@ package com.mt1006.mocap.command.commands;
 import com.mojang.authlib.GameProfile;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mt1006.mocap.command.CommandSuggestions;
 import com.mt1006.mocap.command.CommandUtils;
-import com.mt1006.mocap.command.InputArgument;
 import com.mt1006.mocap.command.io.CommandInfo;
 import com.mt1006.mocap.mocap.recording.Recording;
 import net.minecraft.commands.CommandSourceStack;
@@ -26,7 +26,7 @@ public class RecordingCommand
 		//commandBuilder.then(Commands.literal("start_multiple").then(CommandUtils.withStringArgument(Recording::startMultiple, "players")));
 		commandBuilder.then(Commands.literal("stop").executes(CommandUtils.command(RecordingCommand::stop)).
 			then(Commands.argument("id", StringArgumentType.string()).
-				suggests(InputArgument::currentlyRecordedArgument).executes(CommandUtils.command(RecordingCommand::stop))));
+				suggests(CommandSuggestions::currentlyRecordedSuggestions).executes(CommandUtils.command(RecordingCommand::stop))));
 		commandBuilder.then(Commands.literal("discard").executes(CommandUtils.command(RecordingCommand::discard)).
 			then(Commands.argument("id", StringArgumentType.string()).executes(CommandUtils.command(RecordingCommand::discard))));
 		commandBuilder.then(Commands.literal("save").then(CommandUtils.withStringArgument(RecordingCommand::saveAuto, "name").
