@@ -1,8 +1,8 @@
 package com.mt1006.mocap.command.commands;
 
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mt1006.mocap.command.CommandSuggestions;
 import com.mt1006.mocap.command.CommandUtils;
-import com.mt1006.mocap.command.InputArgument;
 import com.mt1006.mocap.command.io.CommandOutput;
 import com.mt1006.mocap.mocap.files.RecordingFiles;
 import com.mt1006.mocap.utils.Utils;
@@ -17,10 +17,10 @@ public class RecordingsCommand
 	{
 		LiteralArgumentBuilder<CommandSourceStack> commandBuilder = Commands.literal("recordings");
 
-		commandBuilder.then(Commands.literal("copy").then(CommandUtils.withInputAndStringArgument(RecordingFiles::copy, InputArgument::recordingArgument, "src_name", "dest_name")));
-		commandBuilder.then(Commands.literal("rename").then(CommandUtils.withInputAndStringArgument(RecordingFiles::rename, InputArgument::recordingArgument, "old_name", "new_name")));
-		commandBuilder.then(Commands.literal("remove").then(CommandUtils.withInputArgument(RecordingFiles::remove, InputArgument::recordingArgument, "name")));
-		commandBuilder.then(Commands.literal("info").then(CommandUtils.withInputArgument(RecordingFiles::info, InputArgument::recordingArgument, "name")));
+		commandBuilder.then(Commands.literal("copy").then(CommandUtils.withInputAndStringArgument(RecordingFiles::copy, CommandSuggestions::recordingSuggestions, "src_name", "dest_name")));
+		commandBuilder.then(Commands.literal("rename").then(CommandUtils.withInputAndStringArgument(RecordingFiles::rename, CommandSuggestions::recordingSuggestions, "old_name", "new_name")));
+		commandBuilder.then(Commands.literal("remove").then(CommandUtils.withInputArgument(RecordingFiles::remove, CommandSuggestions::recordingSuggestions, "name")));
+		commandBuilder.then(Commands.literal("info").then(CommandUtils.withInputArgument(RecordingFiles::info, CommandSuggestions::recordingSuggestions, "name")));
 		commandBuilder.then(Commands.literal("list").executes(CommandUtils.command(RecordingsCommand::list)));
 
 		return commandBuilder;
